# freshdesk_mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/freshdesk_mcp/: __init__.py  cli.py  server.py
tests/: test-fd-mcp.py  test_all_tools_offline.py  test_company_functions.py  test_freshdesk_extended_apis.py  test_freshdesk_mcp.py  test_search_functions.py
