[project]
name = "freshdesk-mcp"
version = "1.1.0"
description = "An MCP server for Freshdesk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.2.2.post1",
    "httpx==0.28.1",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
    "typer>=0.12.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[[project.authors]]
name = "Gopi Krishnan"
email = "gopi@effy.co.in"

[[project.authors]]
name = "Maanaesh Swamy"
email = "maanaesh.s@effy.co.in"

[build-system]
requires = [ "hatchling", "setuptools", "wheel"]
build-backend = "hatchling.build"

[project.scripts]
freshdesk-mcp = "freshdesk_mcp.server:main"
fd = "freshdesk_mcp.cli:main"
